@@ -1,3 +1,11 @@
+Thu Dec 24 18:43:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* error.c (rb_compile_error_with_enc, rb_compile_error),
+	  (rb_compile_bug): deprecate internal functions.
+
+	* parse.y (parser_yyerror): construct exception message with
+	  source code and carret.
+
 Thu Dec 24 17:25:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (append_compile_error), parse.y (compile_error):
